remove uncessary file

--- a/wsn/app/templates/index.html
+++ b/wsn/app/templates/index.html
@@ -197,7 +197,7 @@ border-bottom: 1px solid #ddd;
                         <div id = "info_type" style="margin: 14px; margin-bottom: 100px;padding-top: 15px;border-top: 1px #0E0E0E solid;">
                             <h4 style="font: 800 20px/1.4 黑体;color: #0E0E0E;margin-left: 5%;">水文|环境|生活</h4>
                         </div>
-                        <button type="button" class="btn btn-primary btn-lg" style="width:40%;margin-left: 5%;">信息观测</button>
+                        <button type="button" class="btn btn-primary btn-lg" style="width:40%;margin-left: 5%;" onclick="window.location.href='/air'">信息观测</button>
                         <button type="button" class="btn btn-success btn-lg" style="width:40%;margin-left: 5%;">产品介绍</button>
                     </div>
                     <div id = "up_right" style = "width: 50%; height:467px;float:right;background-color: null; ">
@@ -252,7 +252,7 @@ border-bottom: 1px solid #ddd;
 		
 		<div class="footer">
             <div class="bottom margin12 wrap" style="position: fixed;padding-top: 0px; ">
-                Copyright ©2014-2014 池州市童子岭观测点 <br>
+                Copyright ©2015-2015 池州市童子岭观测点 <br>
                 联系方式：<a href="mailto:929034478@qq.com" target="_blank">技术支持邮箱</a>  &nbsp;&nbsp;&nbsp;<a href="adminlogin.jsp" target="_blank">管理入口</a>
             </div>
         </div>
