--- a/wsn/app/templates/air.html
+++ b/wsn/app/templates/air.html
@@ -25,12 +25,12 @@
         <style>
             html {  height: 100%   }
             body {  height: 100%;  margin: 0px;  padding: 0px    }
-            #right { height: 100%;  width: 85%;  background-color: gray;  float:right;    }
-            #left{  font-size:27px; height: 100%; width: 15%; background-color:gray; float:left;   }
-            tr {  text-align:center; display: table-row;vertical-align: inherit;border-color: inherit;}
-            td, th {text-align:center;display: table-cell;vertical-align: inherit;}
-            .cur {font-size: 14px;color: #000000;width: 135px;height: 60px;background: url(/site_media/images/tdstyle.png) no-repeat center center;  }
-            .activehover{font-size: 14px;color: #000000;width: 135px;height: 60px;background: url(/site_media/images/tdstyle_cur.png) no-repeat center center;  }
+{#            #right { height: 100%;  width: 85%;  background-color: gray;  float:right;    }#}
+{#            #left{  font-size:27px; height: 100%; width: 15%; background-color:gray; float:left;   }#}
+{#            tr {  text-align:center; display: table-row;vertical-align: inherit;border-color: inherit;}#}
+{#            td, th {text-align:center;display: table-cell;vertical-align: inherit;}#}
+{#            .cur {font-size: 14px;color: #000000;width: 135px;height: 60px;background: url(/site_media/images/tdstyle.png) no-repeat center center;  }#}
+{#            .activehover{font-size: 14px;color: #000000;width: 135px;height: 60px;background: url(/site_media/images/tdstyle_cur.png) no-repeat center center;  }#}
             a{text-decoration: none;}
             .mrn0{margin-right: 30px;width: 10%; }
         </style>
