--- a/wsn/app/templates/admin/admin_news.html
+++ b/wsn/app/templates/admin/admin_news.html
@@ -46,15 +46,15 @@
 	<div class="csdn-toolbar csdn-toolbar-skin-black ">
 		<div class="container row center-block ">
             <div class="pull-left">
-                <a href="managenews.jsp" >新闻模块</a>
-                <a href="manageadmin.jsp" >用户管理</a>
-                <a href="managedata_air.jsp">数据管理</a>
+                <a href="/wsn_admin/admin_news" >新闻模块</a>
+                <a href="/wsn_admin/admin_user" >用户管理</a>
+                <a href="/wsn_admin/data?data_type=air">数据管理</a>
             </div>
 			<div class="pull-right login-wrap unlogin">
 				<ul class="btns">
 					<li class="loginlink"><span>欢迎您，XXX
-					</span>&nbsp;|<a href="updateadmininfo.jsp" target="_top">&nbsp;修改信息&nbsp;</a>|<a href="updateadminpwd.jsp"
-						target="_top">&nbsp;修改密码&nbsp;</a> |<a target="_top" href="Adminlogout">&nbsp;登出</a>|<a target="_top" href="GetIndexData">&nbsp;首页</a>
+					</span>&nbsp;|<a href="/wsn_admin/user/update" target="_top">&nbsp;修改信息&nbsp;</a>|<a href="/wsn_admin/user/update_password"
+						target="_top">&nbsp;修改密码&nbsp;</a> |<a target="_top" href="/wsn_admin/user/logout">&nbsp;登出</a>|<a target="_top" href="/index">&nbsp;首页</a>
 					</li>
 				</ul>
 			</div>
