--- a/wsn/app/templates/admin/edit_draft.html
+++ b/wsn/app/templates/admin/edit_draft.html
@@ -42,9 +42,9 @@
         <div class="csdn-toolbar csdn-toolbar-skin-black ">
             <div class="container row center-block ">
                 <div class="pull-left">
-                    <a href="managenews.jsp" >新闻模块</a>
-                    <a href="manageadmin.jsp" >用户管理</a>
-                    <a href="managedata_air.jsp">数据管理</a>
+                    <a href="/wsn_admin/admin_news" >新闻模块</a>
+                    <a href="/wsn_admin/admin_user" >用户管理</a>
+                    <a href="/wsn_admin/data?data_type=air">数据管理</a>
                 </div>
                 <div class="pull-right login-wrap unlogin">
                     <ul class="btns">
