upload file with XMLHTTPREQUEST

--- a/wsn/app/templates/admin/admin_data_water.html
+++ b/wsn/app/templates/admin/admin_data_water.html
@@ -81,21 +81,43 @@
     function upload_data(data_type){
         var file = document.getElementById("data_file").files;
         alert(file[0].name);
-        $.ajax({
-            type:"post",
-            processData: false,
-            url: "/wsn_admin/data/upload/",
-            data:{
-                "data_file": file[0],
-                "data_type": data_type
-            },
-            success:function(data){
-                alert(data);
-            },
-            error:function(){
-                alert("异常");
+
+        var xhr = new XMLHttpRequest();
+        xhr.open('post', '/wsn_admin/data/upload/', true);///upload为文件上传的接口
+        var fd = new FormData();
+        fd.append('data_file', file[0]);
+        fd.append('data_type', data_type);
+        xhr.onreadystatechange = tip;
+        xhr.send(fd);
+        function tip(){
+            if(xhr.readyState == 4 && xhr.status == 200){
+                var b = xhr.responseText;
+                if(b != "error") {
+                    alert(b);
+                }
+                else{
+                    alert("error");
+                }
             }
-        });
+            else if(xhr.readyState == 4){
+                alert("通信失败");
+            }
+        }
+{#        $.ajaxSubmit({#}
+{#            type:"post",#}
+{#            processData: false,#}
+{#            url: "/wsn_admin/data/upload/",#}
+{#            data:{#}
+{#                "data_file": file[0],#}
+{#                "data_type": data_type#}
+{#            },#}
+{#            success:function(data){#}
+{#                alert(data);#}
+{#            },#}
+{#            error:function(){#}
+{#                alert("异常");#}
+{#            }#}
+{#        });#}
     }
 </script>
 </html>
