--- a/wsn/app/templates/admin/admin_data_water.html
+++ b/wsn/app/templates/admin/admin_data_water.html
@@ -76,7 +76,7 @@
                    value = "上传" >
             <input id = "data_file" type="file" name = "data_file" style = "display: inline; float: right;"
                    accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet">
-            <input type="text" name = "data_type" value="water" style="display:hidden;">
+            <input type="text" name = "data_type" value="water" style="display:none;">
         </form>
 {#        <input style="display: inline; float: right;" type="button" value = "上传" onclick="upload_data('water')" >#}
 {#        <input id = "data_file" style = "display: inline; float: right;" type="file" enctype="multipart/form-data" accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet">#}
