--- a/wsn/app/templates/admin/admin_news.html
+++ b/wsn/app/templates/admin/admin_news.html
@@ -71,10 +71,10 @@
 
 		<div class="tabs_header">
 			<ul id="ul_tab" class="tabs" style="width:395px;">
-				<li><a href="pub_news_page"><span>发表新闻</span> </a></li>
+				<li><a href="/wsn_admin/pub_news_page"><span>发表新闻</span> </a></li>
 				<li class="active"><a href="#"><span>新闻管理</span> </a></li>
-				<li><a href="admin_draft"><span>草稿箱</span> </a></li>
-				<li><a href="admin_recycle"><span>回收站</span> </a></li>
+				<li><a href="/wsn_admin/admin_draft"><span>草稿箱</span> </a></li>
+				<li><a href="/wsn_admin/admin_recycle"><span>回收站</span> </a></li>
 			</ul>
 		</div>
 
