--- a/wsn/app/templates/admin/pub_news.html
+++ b/wsn/app/templates/admin/pub_news.html
@@ -63,9 +63,9 @@
             <div class="tabs_header">
                 <ul id="ul_tab" class="tabs" style= "width:395px;">
                     <li class="active"><a href="#"><span>发表新闻</span> </a></li>
-                    <li><a href="admin_news"><span>新闻管理</span> </a></li>
-                    <li><a href="admin_draft"><span>草稿箱</span> </a></li>
-                    <li><a href="admin_recycle"><span>回收站</span> </a></li>
+                    <li><a href="/wsn_admin/admin_news"><span>新闻管理</span> </a></li>
+                    <li><a href="/wsn_admin/admin_draft"><span>草稿箱</span> </a></li>
+                    <li><a href="/wsn_admin/admin_recycle"><span>回收站</span> </a></li>
                 </ul>
             </div>
             <form id="pubnewsform" method="post" action="pub_news">
