--- a/wsn/app/templates/news.html
+++ b/wsn/app/templates/news.html
@@ -112,7 +112,7 @@
             <div class="footer">
                 <div class="bottom margin12 wrap">
                     Copyright ©2014-2014 池州市童子岭观测点 <br>
-                    联系方式：<a href="mailto:929034478@qq.com" target="_blank">技术支持邮箱</a>  &nbsp;&nbsp;&nbsp;<a href="adminlogin.jsp" target="_blank">管理入口</a>
+                    联系方式：<a href="mailto:929034478@qq.com" target="_blank">技术支持邮箱</a>  &nbsp;&nbsp;&nbsp;<a href="/wsn_admin/index/" target="_blank">管理入口</a>
                 </div>
             </div>
 
