--- a/wsn/app/templates/index.html
+++ b/wsn/app/templates/index.html
@@ -253,7 +253,7 @@ border-bottom: 1px solid #ddd;
 		<div class="footer">
             <div class="bottom margin12 wrap" style="position: fixed;padding-top: 0px; ">
                 Copyright ©2015-2015 池州市童子岭观测点 <br>
-                联系方式：<a href="mailto:929034478@qq.com" target="_blank">技术支持邮箱</a>  &nbsp;&nbsp;&nbsp;<a href="adminlogin.jsp" target="_blank">管理入口</a>
+                联系方式：<a href="mailto:929034478@qq.com" target="_blank">技术支持邮箱</a>  &nbsp;&nbsp;&nbsp;<a href="/wsn_admin/index/" target="_blank">管理入口</a>
             </div>
         </div>
 
