--- a/wsn/app/templates/admin/admin_news.html
+++ b/wsn/app/templates/admin/admin_news.html
@@ -35,7 +35,7 @@
 	}
 	
 	 function Selchange(id) {
-    	window.location.href = 'admin_news?news_type=' + id;
+    	window.location.href = '/wsn_admin/admin_news?news_type=' + id;
     }
 </script>
 <link rel="stylesheet" href="/site_media/css/manage.css" />
