update info while choose second tag

--- a/wsn/app/templates/admin/admin_news.html
+++ b/wsn/app/templates/admin/admin_news.html
@@ -18,7 +18,7 @@
 
 	function seebytype(type) {
         var tmp = Number($("#selType").val()) * 10 + Number(type);
-		window.location.href = 'admin_news?news_type=' + tmp;
+		window.location.href = '/wsn_admin/admin_news?news_type=' + tmp;
 	}
 
 	function deletenews(news_id) {
